# QtQuickControlsOverview

./: README.md
QtQuickControls_Section2/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section3/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section4/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section5/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section6_1/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section6_2/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section7/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section8/: CMakeLists.txt  Main.qml  main.cpp
QtQuickControls_Section8/ColorModel/: colormodel.cpp  colormodel.h
QtQuickControls_Section8/QML/: Feedback.qml  InputControls.qml  LogosSwipeView.qml
